--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,6 @@ jobs:
     - name: yarn install, build, and test
       run: |
         yarn install
-        yarn run build --if-present
+        yarn run build
       env:
         CI: true
