--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,22 +24,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-
     - name: Create local changes and push upstream
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
+        yarn install
         yarn run build
         cd dist
         git init
         git add -A
         git commit -m "$(git log --pretty=oneline --abbrev-commit | head -n1 | cut -d ' ' -f 2-)" -a
         git push -f git@github.com:tommybrecher/tommybrecher.github.io.git master
-    
-    # - name: Push changes
-    #   uses: ad-m/github-push-action@master
-    #   with:
-    #     ssh: true
-    #     branch: ${{ github.ref }}
-    #     force: true
-    #     repository: tommybrecher/tommybrecher.github.io
