--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,9 +30,9 @@ jobs:
         yarn install
         yarn run build
         cd dist
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
         git init
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
         git add -A
         git commit -m "$(git log --pretty=oneline --abbrev-commit | head -n1 | cut -d ' ' -f 2-)" -a
         git push -f git@github.com:tommybrecher/tommybrecher.github.io.git master
