--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Create local changes and push upstream
+    - name: Create local changes
       run: |
         yarn install
         yarn run build
@@ -38,3 +38,11 @@ jobs:
         git add -A
         git commit -m "${COMMIT_MSG}" -a
         git push -f git@github.com:tommybrecher/tommybrecher.github.io.git master
+
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        branch: master
+        force: true
+        github_token: ${{ secrets.DEPLOY_TOKEN }}
+        directory: $GITHUB_WORKSPACE/dist
